--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
     },
     "dependencies": {
         "bootstrap": "^4.6.0",
-        "gsap": "^3.6.0",
+        "gsap": "npm:@gsap/shockingly",
         "handlebars-helpers": "^0.10.0",
         "swiper": "^6.4.11"
     }
